objects/PricingRequestOutputField__mdt.object
<CustomObject>
    <fields>
        <fullName>APIFieldName__c</fullName>
        <label>APIFieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APIParentNode__c</fullName>
        <label>APIParentNode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentContainer__c</fullName>
        <label>ParentContainer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PricingRequestOutputField</label>
    <pluralLabel>PricingRequestOutputFields</pluralLabel>
</CustomObject>